<resources>
    <string name="app_name">AnimalCrossingWiki</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fish">鱼</string>
    <string name="insect">虫</string>

    <string name="all">全部</string>
    <string name="month_north">本月北半球</string>
    <string name="month_south">本月南半球</string>
    <string name="owned">已拥有</string>
    <string name="not_owned">未拥有</string>
    <string name="donated">已捐赠</string>
    <string name="not_donated">未捐赠</string>
    <string name="apply">提交</string>

    <string name="mark_owned">标记拥有</string>
    <string name="mark_donated">标记捐赠</string>

</resources>
